Fixed od extra gap on the right of video controls. Nani?

--- a/app/assets/stylesheets/ui/videos/controls/playback_controls.css
+++ b/app/assets/stylesheets/ui/videos/controls/playback_controls.css
@@ -17,6 +17,7 @@
   visibility: hidden;
   position: absolute;
   opacity: 0;
+  width: 100%;
   transition: opacity 0.5s linear, visibility 0.5s linear;
 }
 .video .playback-controls::before {
